[package]
name = "NullStrike"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
comfy-table = "7.2.2"
crossterm = "0.27"
futures = "0.3.32"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "send"] }
petgraph = "0.8.3"
rand = "0.10.1"
ratatui = "0.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sysinfo = "0.39.5"
tokio = { version = "1.52.3", features = ["full"] }
