[package]
name = "nullstrike-server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.32", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.10"
prost = "0.12"
anyhow = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
comfy-table = "7.1"
neo4rs = "0.7.0"
async-trait = "0.1"
petgraph = "0.8.3"
chrono = "0.4.45"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
tonic-build = "0.10"
