[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.32", features = ["full"] }
tonic = "0.10"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"
